<resources>
    <string name="app_name">HEA App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="side_bar_info_user">Information User</string>
    <string name="side_bar_info_app">Information App</string>
    <string name="side_bar_logout">Logout</string>

    <string name="side_bar_header_text">All for your health</string>


    <string name="toggle_open">Open</string>
    <string name="toggle_close">Close</string>
    <string name="text_list_exercises">List Exercises</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="exer_info_name">Name :</string>
    <string name="exer_info_description">Description :</string>
    <string name="exer_info_muscles">Muscles Affect :</string>
    <string name="todo">TODO</string>
    <string name="equipment">Equipment :</string>
    <string name="s_null">NULL</string>
    <string name="msg_loading">Loading…</string>
    <string name="msg_request_enter_info">You have to input your detail for this function!</string>
    <string name="title_input_water">Input water amount</string>
    <string name="msg_save_info_success">Save information successfully!</string>
    <string name="msg_create_account">Creating Account…</string>
    <string name="msg_username_policy">Name must be at least 3 characters!</string>
    <string name="msg_password_policy">Password must be at least 6 characters!</string>
    <string name="msg_invalid_email">Invalid email address!</string>
    <string name="msg_signup_success">Sign Up Successfully!</string>
    <string name="msg_signup_failed">Sign Up Failed!</string>
    <string name="title_workout">WORKOUT</string>
    <string name="title_health_summary">DASHBOARD</string>
    <string name="title_health_infomation">HEALTH INFORMATION</string>
    <string name="des_workout">Take care your health with  most useful and effective workout plans</string>
    <string name="des_health_summary">Keep your eyes on health tracking by log and reminder your activities</string>
    <string name="des_health_info">Provide information about environment and food for your healthy life</string>
    <string name="msg_authenticating">Authenticating…</string>
    <string name="msg_login_success">Login Successfully!</string>
    <string name="msg_login_failed">Login Failed!</string>
    <string name="msg_press_to_exit">Press once again to exit!</string>
    <string name="msg_signout_success">Sign out successfully!</string>
    <string name="msg_emai_pw_empty">Email and password can\'t be empty</string>
    <string name="msg_all_field_empty">All fields must not be empty!</string>
    <string name="languages">Languages</string>
    <string name="choose_lang">Select Languages!!!</string>
    <string name="current_weather">Current Weather</string>
    <string name="news">News</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_direct">Wind Direct</string>
    <string name="air_quality">Air Quality</string>

    <string name="add_custom_food">Add your custom food here!</string>
    <string name="reminder_workout">Reminder Workout</string>
    <string name="choose_day">Choose day!!</string>

    <string-array name="day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="activitiesName">
        <item>Sleeping</item>
        <item>Desk Work</item>
        <item>Light Calisthenics</item>
        <item>Vigorous Calisthenics</item>
        <item>Gymnastics</item>
        <item>Walking slow</item>
        <item>Walking moderate</item>
        <item>Walking fast</item>
        <item>Running Slow</item>
        <item>Running moderate</item>
        <item>Running fast</item>
        <item>Cycling slow</item>
        <item>Cycling moderate</item>
        <item>Cycling fast</item>
        <item>Rope Jumping</item>
        <item>Swimming</item>
        <item>Yoga</item>
    </string-array>

    <string-array name="foodTime">
        <item>Breakfast</item>
        <item>Launch</item>
        <item>Dinner</item>
    </string-array>

    <string-array name="lang">
        <item>English</item>
        <item>Vietnamese</item>
        <item>System Default</item>
    </string-array>

    <string name="all_week">Every Day</string>
    <string name="normal_day">Normal Day</string>

    <string name="title_sleeping">Sleeping</string>
    <string name="title_typing_writing_desk_work">Typing, Writing, Desk Work</string>
    <string name="title_walking_very_slow">Walking,very slow, 1.7mph</string>
    <string name="title_walking_normal">Walking, normal, 2.5 mph</string>
    <string name="title_walking_fast">Walking, fast, 3.4 mph</string>
    <string name="title_running_slow">Running slow, 4 mph</string>
    <string name="title_running_normal">Running slow, 6.7 mph</string>
    <string name="title_running_fast">Running fast,14 mph</string>
    <string name="title_cycling_slow">Cycling slow, 5.5 mph</string>
    <string name="title_cycling_normal">Cycling normal, 12–13.9 mph</string>
    <string name="title_cycling_fast">Cycling fast, 20 mph</string>
    <string name="title_rope_jumping">Rope jumping</string>
    <string name="title_breakfast">Breakfast</string>
    <string name="title_water">Water</string>
    <string name="title_launch">Launch</string>
    <string name="msg_add_your_food_here">Add your food here!</string>
    <string name="title_dinner">Dinner</string>
    <string name="title_activities">Activities</string>
    <string name="msg_add_your_activities_here">Add your activities here!</string>
    <string name="title_your_body_indices">Your body indices</string>
    <string name="title_calisthenics_lighteffort">Calisthenics, Light Effort</string>
    <string name="title_calisthenics_vigorousffort">Calisthenics, Vigorous Effort</string>
    <string name="title_gymnastics">Gymnastics General</string>
    <string name="title_swimming">Swimming</string>
    <string name="title_yoga">Yoga</string>
    <string name="add_activities_success">Add activities successfully</string>
    <string name="add_activities_fail">Add activities failed. Please fill all field!</string>
    <string name="add_food_success">Add food successfully</string>
    <string name="add_food_fail">Add food failed!</string>
    <string name="msg_input_water_amount">Please input amount of water!</string>
    <string name="daily_calories">Daily Calories</string>
    <string name="ffmi">FFMI</string>
    <string name="body_fat">Body Fat</string>
    <string name="blood_volume">Blood Volume</string>
    <string name="water_requirement">Water Requirement</string>
    <string name="body_water">Body Water</string>
    <string name="lean_body_mass">Lean Body Mass</string>
    <string name="bmi">BMI</string>
    <string name="litter">litters</string>

    <string name="eaten">Eaten</string>
    <string name="kcal_left">kCal Left</string>
    <string name="burned">Burned</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="food_name">Food name</string>
    <string name="energy_kcal">Energy(kCal)</string>
    <string name="carbohydrates_g">Carbohydrates(g)</string>
    <string name="protein_g">Protein(g)</string>
    <string name="fat_g">Fat(g)</string>
    <string name="add_food">Add food!</string>
    <string name="title_time_mns">Time(Mns)</string>
    <string name="kcal">kCal</string>
    <string name="back">Back</string>
    <string name="activities_name">Activities Name</string>
    <string name="_75ml">75ml</string>
    <string name="_150ml">150ml</string>
    <string name="_250ml">250ml</string>
    <string name="_330ml">330ml</string>
    <string name="custom">Custom</string>
    <string name="minutes">Minutes</string>
    <string name="add_activities">Add activities!</string>
    <string name="msg_daily_noti">That all for today! Good night and be ready for new day!</string>
    <string name="uploading">Uploading</string>
    <string name="msg_upload_failed">Upload failed!</string>
    <string name="msg_no_image_selected">No image selected!</string>
    <string name="msg_upload_in_progress">Upload in progress</string>
    <string name="time_duration">Duration(Mns)</string>
    <string name="default_activity_burned_energy">Total: 0kCal</string>
    <string name="msg_input_valid_time">Please input valid time!</string>
    <string name="msg_no_account_yet_create_one">No account yet? Create one</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="create_account">Create Account</string>
    <string name="msg_already_a_member_login">Already a member? Login</string>
    <string name="msg_welcome_to_life_care">Welcome to Life-care</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="chest_in_cm">Chest in cm</string>
    <string name="hip_in_cm">Hip in cm</string>
    <string name="waist_in_cm">Waist in cm</string>
    <string name="height_in_cm">Height in cm</string>
    <string name="weigh_in_kg">Weigh in kg</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="your_detail">Your Detail</string>
    <string name="msg_permission_denied">Permission Denied</string>
    <string name="not_available">N/A</string>
    <string name="health_report">Health Report</string>
    <string name="title_food">Food</string>
    <string name="food_adding">Food adding</string>
    <string name="today">Today</string>
    <string name="this_month">This month</string>
</resources>
