<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_user"
        android:id="@+id/side_bar_info_user"
        android:title="@string/side_bar_info_user"
        app:actionViewClass="android.widget.LinearLayout">

    </item>
    <item
        android:icon="@drawable/ic_app"
        android:id="@+id/side_bar_info_app"
        android:title="@string/side_bar_info_app">

    </item>
    <item
        android:icon="@drawable/ic_reminder"
        android:id="@+id/side_bar_remider"
        android:title="@string/reminder_workout"
        app:actionViewClass="android.widget.TextView">

    </item>
    <item
        android:icon="@drawable/ic_description_black_24dp"
        android:id="@+id/side_bar_health_report"
        android:title="@string/health_report"
        app:actionViewClass="android.widget.TextView">

    </item>
    <item
        android:icon="@drawable/ic_multiple_languages"
        android:id="@+id/side_bar_lang"
        android:title="@string/languages">

    </item>
    <item
        android:icon="@drawable/ic_logout"
        android:id="@+id/side_bar_logout"
        android:title="@string/side_bar_logout">

    </item>

</menu>