<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:context=".view.activity.ExerciseInfoActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:textAlignment="center"
            android:id="@+id/exerciseInfoToolbar">
        </androidx.appcompat.widget.Toolbar>
        <ImageView
            android:id="@+id/imgExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle_round"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/exer_info_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/exercise_info_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/exer_info_description"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/exercise_info_description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/exer_info_muscles"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/exercise_info_muscle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnExerInfo"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:background="@drawable/border_round"
            android:layout_gravity="center"
            android:text="@string/start_exercise"
            android:layout_width="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</ScrollView>