<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:background="@drawable/border_category"
                android:layout_margin="12dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/exer_info_description"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/exercise_info_description_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/exer_info_muscles"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/exercise_info_muscle_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/s_null"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/equipment"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/exercise_info_equipment_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/s_null"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btnExer_Info_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/border_round"
                android:padding="5dp"
                android:text="@string/start_exercise" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>